--- a/frontend/src/pages/PokeDex.css
+++ b/frontend/src/pages/PokeDex.css
@@ -1,37 +1,66 @@
-#makes-container {
+.container-all-pokedex {
+  width: 100%;
+  height: 100vh;
+}
+
+.pokedex-title {
+  width: 100%;
+  height: 10%;
+  background-color: gray;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokedex-title > span {
+  font-size: 35px;
+  font-weight: bold;
+  color: white;
+}
+
+.pokedex-title > button {
+  position: absolute;
+  left: 0;
+}
+
+.pokedex-cards {
+  width: 100%;
+  height: 90%;
+  padding: 2em;
+  padding-bottom: 4em;
+  background-color: rgb(216, 216, 216);
+}
+
+.container-cards {
+  border: 3px solid black;
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  overflow: scroll;
+}
+
+.cards {
+  width: 8em;
+  height: 9em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 0.5em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
-  background-color: white;
-  border-radius: 1rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2), -5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
-#makes-container .makes-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 1rem;
+.cards > img {
+  height: 6em;
 }
 
-#makes-container .makes-grid figure {
-  margin: 1rem;
-  text-align: center;
-  background-color: cyan;
-  padding: 1rem;
-  border-radius: 1rem;
-  transition: box-shadow 0.5s, transform 0.5s;
-  cursor: pointer;
-}
-
-#makes-container .makes-grid figure figcaption {
-  margin-top: 1rem;
+.cards > span {
+  margin-top: 0.5em;
   font-weight: bold;
-}
-
-#makes-container .makes-grid figure:hover {
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2), -5px 5px 5px rgba(0, 0, 0, 0.2);
-  transform: scale(1.1);
 }
