--- a/frontend/src/pages/PokeDex.css
+++ b/frontend/src/pages/PokeDex.css
@@ -36,10 +36,11 @@
   border: 3px solid black;
   border-radius: 15px;
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: space-evenly;
   overflow: scroll;
+  flex-wrap: wrap;
 }
 
 .cards {
@@ -63,4 +64,19 @@
 .cards > span {
   margin-top: 0.5em;
   font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .container-all-pokedex {
+    height: 60em;
+  }
+  .pokedex-title {
+    height: 15%;
+  }
+  .pokedex-title > span {
+    font-size: 4em;
+  }
+  .container-cards {
+    margin-top: 1em;
+  }
 }
