--- a/frontend/src/pages/PokeDex.css
+++ b/frontend/src/pages/PokeDex.css
@@ -36,6 +36,7 @@
   border: 3px solid black;
   border-radius: 15px;
   width: 100%;
+  max-height: 100%;
   height: auto;
   display: flex;
   justify-content: space-evenly;
