--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -123,6 +123,21 @@
 .second-container-third {
   width: 100%;
   height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 5em;
+  padding-right: 5em;
+}
+
+.second-container-third > button {
+  background-color: rgb(207, 207, 207);
+  border-radius: 15px;
+  color: black;
+  font-size: 25px;
+  font-weight: bold;
+  width: 5em;
+  height: 2em;
 }
 
 /*------------------------------Third------------------------------*/
@@ -135,6 +150,32 @@
   background-size: cover;
   background-position: center;
   border: 3px solid black;
+  padding: 2em;
+}
+
+.chat-container {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.825);
+  border-radius: 15px;
+  border: 2px solid black;
+}
+
+.chat-container-title {
+  height: 8%;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 2px solid black;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-container-title > span {
+  font-weight: bold;
+  font-size: 30px;
 }
 
 @media screen and (max-width: 768px) {
@@ -144,6 +185,13 @@
   .first-container {
     width: 100%;
     height: 10em;
+  }
+  .first-container-first {
+    display: flex;
+  }
+  .first-container-second {
+    display: flex;
+    flex-direction: row;
   }
   .second-container {
     width: 100%;
